holy shit I got it compiling