@@ -8,6 +8,7 @@ import com.igrium.worldexport.mixin.AccessorItemStackRenderState;
 import com.igrium.worldexport.mixin.AccessorLayerRenderState;
 import com.igrium.worldexport.replay.MaterialHolder;
 import com.igrium.worldexport.tex.ReplayMtl;
+import com.mojang.blaze3d.vertex.QuadInstance;
 import de.javagl.obj.Mtls;
 import de.javagl.obj.Obj;
 import de.javagl.obj.Objs;
@@ -23,79 +24,85 @@ import net.minecraft.client.resources.model.geometry.BakedQuad;
 import net.minecraft.world.entity.HumanoidArm;
 import com.mojang.math.Axis;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
-public class HeldItemFeatureAdapter<S extends ArmedEntityRenderState, M extends EntityModel<S> & ArmedModel>
+public class HeldItemFeatureAdapter<S extends ArmedEntityRenderState, M extends EntityModel<S> & ArmedModel<?>>
         extends FeatureAdapter<S, M> {
 
     public HeldItemFeatureAdapter(RenderLayer<S, M> renderer) {
         super(renderer);
     }
 
-    private record HandedModel(HumanoidArm hand, List<BakedQuad> model) {};
+    private record HandedModel(HumanoidArm hand, List<BakedQuad> model) {
+    }
+
+    ;
 
     public static final String ITEM_MAT = "items";
 
-    @SuppressWarnings({"unchecked", "rawtypes"}) // M is only used internally, so as long as it's self-consistent, its value doesn't matter.
+    @SuppressWarnings({"unchecked", "rawtypes"})
+    // M is only used internally, so as long as it's self-consistent, its value doesn't matter.
     public static <S extends ArmedEntityRenderState> FeatureAdapter<S, ?> create(RenderLayer<S, ?> renderer) {
-        return new HeldItemFeatureAdapter<>((ItemInHandLayer) renderer); // If render properly casts to ArmorFeatureRenderer, then S must be in-bounds.
+        return new HeldItemFeatureAdapter<>((ItemInHandLayer) renderer); // If render properly casts to
+        // ArmorFeatureRenderer, then S must be in-bounds.
     }
 
     @Override
-    public void capture(CapturedEntity capture, MaterialHolder materials, S state, float limbAngle, float limbDistance, int tick) {
+    public void capture(CapturedEntity capture, MaterialHolder materials, S state, float limbAngle,
+                        float limbDistance, int tick) {
         captureItem(capture, materials, state, state.rightHandItemState, HumanoidArm.RIGHT, tick);
         captureItem(capture, materials, state, state.leftHandItemState, HumanoidArm.LEFT, tick);
     }
 
     private final Map<HandedModel, String> itemModelNames = new HashMap<>();
 
-    protected void captureItem(CapturedEntity capture, MaterialHolder materials, S state, ItemStackRenderState itemState, HumanoidArm arm, int tick) {
+    protected void captureItem(CapturedEntity capture, MaterialHolder materials, S state,
+                               ItemStackRenderState itemState, HumanoidArm arm, int tick) {
         if (itemState.isEmpty())
             return;
 
         ReplayMtl mat = materials.getOrCreateMtl("entities.mtl", ItemModelAdapter.ITEM_MTL, n -> {
-           ReplayMtl mtl = new ReplayMtl(Mtls.create(n));
-           mtl.mtl().setMapKd("world.png");
-           mtl.mtl().setMapD("world.png");
-           mtl.properties().put("item", ReplayMtl.Property.of(true));
-           return mtl;
+            ReplayMtl mtl = new ReplayMtl(Mtls.create(n));
+            mtl.mtl().setMapKd("world.png");
+            mtl.mtl().setMapD("world.png");
+            mtl.properties().put("item", ReplayMtl.Property.of(true));
+            return mtl;
         });
 
-        for (var layer : ((AccessorItemStackRenderState) itemState).getLayers()) {
-            List<BakedQuad> model = ((AccessorLayerRenderState) layer).getModel();
-            if (model == null)
-                continue; // TODO: Special models
+        PoseStack matrices = new PoseStack();
+        matrices.mulPose(Axis.XP.rotationDegrees(-90.0F));
+        matrices.mulPose(Axis.YP.rotationDegrees(180.0F));
+        // Magic numbers taken from feature renderer
+        matrices.translate((arm == HumanoidArm.LEFT ? -1 : 1) / 16.0F, 0.125F, -0.625F);
 
-            String name = itemModelNames.computeIfAbsent(new HandedModel(arm, model), m -> "item." + itemModelNames.size());
+        ItemQuadCollector collector = new ItemQuadCollector();
+        itemState.submit(matrices, collector, 1, OverlayTexture.NO_OVERLAY, 0);
+
+
+        // TODO: does a submission represent an entire item or each item model part?
+        for (var submission : collector.getSubmissions()) {
+            String name = itemModelNames.computeIfAbsent(new HandedModel(arm, submission.quads()),
+                    m -> "item." + itemModelNames.size());
 
             capture.getModelParts().computeIfAbsent(name, n -> {
-                PoseStack matrices = new PoseStack();
-                matrices.mulPose(Axis.XP.rotationDegrees(-90.0F));
-                matrices.mulPose(Axis.YP.rotationDegrees(180.0F));
-                matrices.translate((arm == HumanoidArm.LEFT ? -1 : 1) / 16.0F, 0.125F, -0.625F);
-
                 Obj obj = Objs.create();
-                obj.setMtlFileNames(Collections.singleton("entities.mtl"));
+                obj.setMtlFileNames(Set.of("entities.mtl"));
                 obj.setActiveMaterialGroupName(mat.getName());
 
                 ObjVertexConsumer consumer = new ObjVertexConsumer(obj);
-                itemState.submit(matrices, new WrappedVertexConsumerProvider(consumer), 1, OverlayTexture.NO_OVERLAY);
+                for (BakedQuad quad : submission.quads()) {
+                    consumer.putBakedQuad(submission.stack().last(), quad, new QuadInstance());
+                }
                 consumer.pushFace();
 
-                // TODO: Is there a dynamic way to do this?
                 String parentName = arm == HumanoidArm.LEFT ? "root/left_arm" : "root/right_arm";
                 capture.getParents().put(n, parentName);
 
                 return obj;
             });
-
-            // Bogus frame to make sure it says visible
+            // Bogus frame to make sure it stays visible
             capture.addFrame(name, tick, AnimationCurve.CurveFormat.EMPTY, null, null, null);
-
-
         }
+
     }
 }
